# TeamHackForgeAmazon

./: .gitignore  PRESENTATION_PROMPTS.md  README.md  WINNING_DEMO_SCRIPT.md  pyproject.toml  test_dl_quick.py
libraries/: __init__.py  adapters.py  carbon.py  metrics.py  negative_transfer.py  stat_mapping.py  train_core.py  transfer.py
libraries/dl/: __init__.py  carbon.py  ewc.py  lora.py  merging.py  negative_transfer.py  train.py  transfer.py
tests/: generate_carbon_figures.py  real_datasets.py  run_amazon_sustainability_demo.py  run_amazon_sustainability_demo_comprehensive.py  run_dl_demo.py  run_full_demo.py  run_llm_demo.py  run_realworld_demo.py  run_story_dl_demo.py  run_story_ml_demo.py  run_winning_demo.sh  test_dl_smoke.py  test_smoke.py
